[metadata]
name = argcompgen
version = 0.1.0
description = A command-line argument completion generator for bash and zsh
author = Yuta Fujiyama
author_email = yuta.technology@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/yutatech/argcompgen
long_description = file: README.md
long_description_content_type = text/markdown
keywords = argparse, completion, bash, zsh, cli
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Shells
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    argcompgen = argcompgen.main:main